--- a/tools/Rmd/build_lookup.Rmd
+++ b/tools/Rmd/build_lookup.Rmd
@@ -258,7 +258,7 @@ lookup_s <- unique(params$s)
 
 n_models <- nrow(params)
 t <- unique(params$t)
-sampling_times <- seq(from=0, to=t, by=100)
+sampling_times <- seq(from=0, to=t, by=500)
 
 # Het stats over time (include steady-state and present-time)
 hrs <- as.data.frame(matrix(nrow=n_models, ncol=length(sampling_times)))
@@ -275,13 +275,13 @@ for(i in 1:length(lookup_r)) {
   print(Sys.time())
   for(j in 1:length(lookup_s)) {
     fnames <- list.files(paste("r_", lookup_r[i], "/s_", lookup_s[j], sep=""),
-                         pattern="*_expectations.txt", full.names=TRUE)
+                         pattern="*_e_1_hets_time.txt", full.names=TRUE)
       
     for(l in 1:length(fnames)) {
       moms <- fread(fnames[l])
       str_sides <- strsplit(fnames[l], "_O_")[[1]]
       idx <- as.numeric(strsplit(str_sides[1], "model_")[[1]][2])
-      order <- as.numeric(strsplit(str_sides[2], "_expectations.txt")[[1]][1])
+      order <- as.numeric(strsplit(str_sides[2], "_e_1_hets_time.txt")[[1]][1])
         
       hls[idx,] <- c(t(dplyr::select(filter(moms, V1=="Hl_0_0"), V3)), order)
       hrs[idx,] <- c(t(dplyr::select(filter(moms, V1=="Hr_0_0"), V3)), order)
@@ -289,10 +289,15 @@ for(i in 1:length(lookup_r)) {
   }
 }
 
-lookup <- cbind.data.frame(params, hrs)
-lookup_tbl <- pivot_longer(lookup, cols=as.character(sampling_times),
+lookup_hl <- cbind.data.frame(params, hls)
+lookup_hr <- cbind.data.frame(params, hrs)
+lookup_tbl <- pivot_longer(lookup_hr, cols=as.character(sampling_times),
                        names_to="Generation", values_to="Hr")
 lookup_tbl$Hr <- as.numeric(lookup_tbl$Hr)
+lookup_tbl_hl <- pivot_longer(lookup_hl, cols=as.character(sampling_times),
+                       names_to="Generation", values_to="Hl")
+lookup_tbl$Hl <- as.numeric(lookup_tbl_hl$Hl)
+lookup_tbl$Generation <- as.numeric(lookup_tbl$Generation)
 
 # get pi0 from demography
 demo_models <- crossing(unique(params$Na), unique(params$N1), unique(params$t))
@@ -318,6 +323,8 @@ m_pi0$Generation <- as.numeric(m_pi0$Generation)
 lookup_tbl <- left_join(lookup_tbl, dplyr::select(m_pi0,
                         -c(Na, t)), by=c("N1", "Generation"))
 lookup_tbl$B <- lookup_tbl$Hr / lookup_tbl$pi0
+lookup_tbl$piN_pi0 <- lookup_tbl$Hl / lookup_tbl$pi0
+lookup_tbl$piN_piS <- lookup_tbl$Hl / lookup_tbl$Hr
 
 fwrite(lookup_tbl, "lookup_tbl.csv.gz", compress="gzip") 
 
@@ -398,6 +405,82 @@ for(rec in unique(lookup_tbl$r)) {
   
   cpr <- plot_grid(plotlist=cpn, ncol=2)
   save_plot(paste("B_time_r_", rec, ".png", sep=""), cpr,
+            base_height=10, base_width=16)
+}
+
+for(rec in unique(lookup_tbl$r)) {
+  c <- 1
+  cpn <- list(length=length(unique(lookup_tbl$N1)))
+  for(N in unique(lookup_tbl$N1)) {
+    
+    p1 <- ggplot(data=filter(lookup_tbl, r==rec, s==-1e-3, N1==N),
+                 aes(x=Generation, y=Hl)) + 
+      geom_point() + theme_bw() + geom_line() + 
+      scale_x_continuous(breaks=pretty_breaks()) +
+      scale_y_continuous(breaks=pretty_breaks()) 
+      if(c==1) {
+        p1 <- p1 + labs(title=paste("N1=", N), x=NULL, y="Hl (s=-1e-3)") +
+                   theme(axis.title=element_text(size=16), 
+                         axis.text=element_text(size=12), 
+                         axis.text.x=element_blank(), 
+                         axis.text.y=element_text(size=12),
+                         legend.position="none")
+      } else {
+        p1 <- p1 + labs(title=paste("N1=", N), x=NULL, y=NULL) +
+                   theme(axis.text=element_text(size=12), 
+                         axis.text.x=element_blank(), 
+                         axis.text.y=element_text(size=12),
+                         legend.position="none")
+      }
+    
+    p2 <- ggplot(data=filter(lookup_tbl, r==rec, s==-1e-4, N1==N),
+                 aes(x=Generation, y=Hl)) + 
+      geom_point() + theme_bw() + geom_line() + 
+      scale_x_continuous(breaks=pretty_breaks()) +
+      scale_y_continuous(breaks=pretty_breaks())
+      if(c==1) {
+        p2 <- p2 + labs(title=NULL, x=NULL, y="Hl (s=-1e-4)") +
+                   theme(axis.title=element_text(size=16), 
+                         axis.text=element_text(size=12), 
+                         axis.text.x=element_blank(), 
+                         axis.text.y=element_text(size=12),
+                         legend.position="none")
+      } else {
+        p2 <- p2 + labs(title=NULL, x=NULL, y=NULL) +
+                   theme(axis.text=element_text(size=12), 
+                         axis.text.x=element_blank(), 
+                         axis.text.y=element_text(size=12),
+                         legend.position="none")
+      }
+      
+    p3 <- ggplot(data=filter(lookup_tbl, r==rec, s==-1e-5, N1==N),
+                 aes(x=Generation, y=Hl)) + 
+      geom_point() + theme_bw() + geom_line() + 
+      scale_x_continuous(breaks=pretty_breaks()) +
+      scale_y_continuous(breaks=pretty_breaks())
+    
+    if(c==1) {
+        p3 <- p3 + labs(title=NULL, x="Generation", y="Hl (s=-1e-5)") +
+                   theme(axis.title=element_text(size=16), 
+                         axis.text=element_text(size=12), 
+                         axis.text.x=element_text(size=12), 
+                         axis.text.y=element_text(size=12),
+                         legend.position="none")
+      } else {
+        p3 <- p3 + labs(title=NULL, x="Generation", y=NULL) +
+                   theme(axis.title=element_text(size=16), 
+                         axis.text=element_text(size=12), 
+                         axis.text.x=element_text(size=12), 
+                         axis.text.y=element_text(size=12),
+                         legend.position="none")
+      }
+    
+    cpn[[c]] <- plot_grid(p1, p2, p3, ncol=1, align='v')
+    c <- c + 1
+  }
+  
+  cpr <- plot_grid(plotlist=cpn, ncol=2)
+  save_plot(paste("Hl_time_r_", rec, ".png", sep=""), cpr,
             base_height=10, base_width=16)
 }
 
