--- a/tools/Rmd/build_lookup.Rmd
+++ b/tools/Rmd/build_lookup.Rmd
@@ -337,7 +337,7 @@ for(rec in unique(lookup_tbl$r)) {
     p1 <- ggplot(data=filter(lookup_tbl, r==rec, s==-1e-3, N1==N),
                  aes(x=Generation, y=B)) + 
       geom_point() + theme_bw() + geom_line() + 
-      geom_hline(aes(yintercept=B_eq, color="red")) + 
+      #geom_hline(aes(yintercept=B_eq, color="red")) + 
       scale_x_continuous(breaks=pretty_breaks()) +
       scale_y_continuous(breaks=pretty_breaks()) 
       if(c==1) {
@@ -358,7 +358,7 @@ for(rec in unique(lookup_tbl$r)) {
     p2 <- ggplot(data=filter(lookup_tbl, r==rec, s==-1e-4, N1==N),
                  aes(x=Generation, y=B)) + 
       geom_point() + theme_bw() + geom_line() + 
-      geom_hline(aes(yintercept=B_eq, color="red")) + 
+      #geom_hline(aes(yintercept=B_eq, color="red")) + 
       scale_x_continuous(breaks=pretty_breaks()) +
       scale_y_continuous(breaks=pretty_breaks())
       if(c==1) {
@@ -379,7 +379,7 @@ for(rec in unique(lookup_tbl$r)) {
     p3 <- ggplot(data=filter(lookup_tbl, r==rec, s==-1e-5, N1==N),
                  aes(x=Generation, y=B)) + 
       geom_point() + theme_bw() + geom_line() + 
-      geom_hline(aes(yintercept=B_eq, color="red")) + 
+      #geom_hline(aes(yintercept=B_eq, color="red")) + 
       scale_x_continuous(breaks=pretty_breaks()) +
       scale_y_continuous(breaks=pretty_breaks())
     
@@ -484,4 +484,17 @@ for(rec in unique(lookup_tbl$r)) {
             base_height=10, base_width=16)
 }
 
+p <- ggplot(data=filter(lookup_tbl, r==1e-8, Generation <= 2e+4), aes(x=Generation, y=B, color=as.factor(s))) + 
+      geom_point() + theme_bw() + geom_line() + #facet_wrap(~s) +
+      scale_color_brewer(palette="Dark2", name="s") +
+      scale_x_continuous(breaks=pretty_breaks()) +
+      scale_y_log10(breaks=pretty_breaks()) + guides(alpha="none") +
+      labs(title="B-values over time, Bottleneck", x="Generation", y="B") +
+      theme(axis.title=element_text(size=16), 
+            axis.text=element_text(size=12), 
+            axis.text.x=element_text(size=12),
+            legend.text=element_text(size=16),
+            legend.title=element_text(size=16),
+            legend.position="bottom")
+save_plot("B_gen_s.png", p, base_height=8, base_width=10)
 ```
